test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-no-existing-update-trigger-no-precondition/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: source-secret
  namespace: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
type: Opaque
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-no-existing-update-trigger-no-precondition
spec:
  rules:
  - name: clone-secret
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    preconditions:
      any:
      - key: "{{ request.object.metadata.labels.create || '' }}"
        operator: Equals
        value: "true"
    generate:
      apiVersion: v1
      kind: Secret
      name: downstream-secret
      namespace: "{{request.object.metadata.namespace}}"
      synchronize: true
      clone:
        namespace: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
        name: source-secret
