test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-no-existing-update-trigger-no-precondition/04-update-trigger.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    create: "false"
  name: test-org
  namespace: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
