test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-no-existing-update-trigger-no-precondition/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    create: "true"
  name: test-org
  namespace: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
