test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-no-existing-update-trigger-no-precondition/downstream.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: downstream-secret
  namespace: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
type: Opaque
