test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-no-existing-update-trigger-no-precondition/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-no-existing-update-trigger-no-precondition
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: source-secret
        namespace: cpol-clone-sync-no-existing-update-trigger-no-precondition-ns
      kind: Secret
      name: downstream-secret
      namespace: '{{request.object.metadata.namespace}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: clone-secret
    preconditions:
      any:
      - key: '{{ request.object.metadata.labels.create || '''' }}'
        operator: Equals
        value: "true"
