test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-no-existing-update-trigger-no-precondition/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-no-existing-update-trigger-no-precondition
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
